renamed "Edit profile" to "My profile" and changed notification width to display correctly on mobile

--- a/lastmile-tum-frontend/style/stylesheet.scss
+++ b/lastmile-tum-frontend/style/stylesheet.scss
@@ -614,7 +614,7 @@ li > a {
   background-color: #ec372d !important;
 }
 #notificationContainer {
-  width: 400px;
+  //width: 400px;
   top: 49px;
   display: block;
   left: auto;
